# thinker-doer-clion

./: .clang-format  .gitignore  CMakeLists.txt  README.md  changelog.md
docs/: SMAC-interactive-tech-tree.html  smacx-tech-tree-wtp-alphax.html  smacx-tech-tree-wtp.html  tech_tree.html
resources/configuration/: modmenu.txt  thinker.ini
src/: base.cpp  base.h  engine.cpp  engine.h  engine_base.h  engine_enums.h  engine_types.h  faction.cpp  game.cpp  gui.cpp  gui.h  main.cpp  main.h  map.cpp  map.h  patch.cpp  veh.cpp  wtp_ai.cpp  wtp_ai.h  wtp_aiData.cpp  wtp_aiData.h  wtp_aiMove.cpp  wtp_aiMove.h  wtp_aiMoveArtifact.cpp  wtp_aiMoveColony.cpp  wtp_aiMoveColony.h  wtp_aiMoveCombat.cpp  wtp_aiMoveCombat.h  wtp_aiMoveCrawler.cpp  wtp_aiMoveFormer.cpp  wtp_aiMoveFormer.h  wtp_aiMoveFormer_backup.cpp  wtp_aiMoveFormer_backup.h  wtp_aiMoveProbe.cpp  wtp_aiMoveProbe.h  wtp_aiMoveTransport.cpp  wtp_aiProduction.cpp  wtp_aiProduction.h  wtp_aiRoute.cpp  wtp_aiRoute.h  (+13 more)
